inverted to small view/fixed text-image overlap

--- a/scss/partials/_basic-style.scss
+++ b/scss/partials/_basic-style.scss
@@ -28,13 +28,14 @@ a {
 }
 
 .page-wrapper {
+    @include MQ(L){
     display:grid;
     grid-gap: 1em;
     grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: repeat(3, auto);
     position: relative; 
-
-    @include MQ(S) {
-        display: block;
     }
+    // @include MQ(S) {
+    //     display: block;
+    // }
 }
