--- a/scss/partials/_sidebar.scss
+++ b/scss/partials/_sidebar.scss
@@ -3,18 +3,17 @@
 $sidebar-margin-sm: 1.5em;
 
 .sidebar {
-    padding-top: 10em;
-    display: grid;
-    grid-column: 3/4;
-    grid-row: 1/3;
-
-    @include MQ(S) {
-        display: block;
-        margin-left: $sidebar-margin-sm;
-        margin-right: $sidebar-margin-sm;
-        margin-bottom: $sidebar-margin-sm;
-        padding-top: 1em;
-        grid-column: 0;
-        grid-row: 0;
+    display: block;
+    margin-left: $sidebar-margin-sm;
+    margin-right: $sidebar-margin-sm;
+    margin-bottom: $sidebar-margin-sm;
+    padding-top: 1em;
+    // grid-column: 0;
+    // grid-row: 0;
+    @include MQ(L) {
+        padding-top: 10em;
+        // display: grid;
+        grid-column: 3/4;
+        grid-row: 1/3;
     }
 }
